--- a/examples/web5-quickstart-widgets/index.html
+++ b/examples/web5-quickstart-widgets/index.html
@@ -141,7 +141,19 @@
   </section>
 </main>
 
-<script>
+<script type="module">
+
+  import { 
+    didCreate, 
+    createTextRecord, 
+    dwnUpdateDataFromRecord, 
+    dwnReadDataFromRecord, 
+    dwnDeleteRecord
+  } from  './index.js'
+
+  let myDid;
+  let web5;
+  let record;
 
   /* This line is causing the following test failure: 
       FAIL  examples/web5-quickstart-widgets/__tests__/widget.test.js [ examples/web5-quickstart-widgets/__tests__/widget.test.js ] 
@@ -196,6 +208,10 @@
   let registered = false;
 
   function update() {
+    if(record?.isDeleted) {
+      record = null;
+    }
+
     if (!myDid) {
       registered = false;
     }
@@ -213,7 +229,10 @@
         : "";
     }
 
+   
+
     let noRecord = !record;
+
 
     dwnWriteInputFile.disabled = !registered;
     dwnWriteInputButton.disabled = !registered || !dwnWriteInputFile.value;
@@ -258,7 +277,10 @@
     dwnWriteInputButton.disabled = true;
     dwnWriteInputProgress.style.visibility = "visible";
     dwnWriteOutputSummary.innerHTML = "...";
-    await createTextRecord(dwnWriteInputFile.value);
+    const result = await createTextRecord(web5, dwnWriteInputFile.value);
+
+    record = result.record;
+
     dwnWriteOutputDetailsTextarea.value = "ALR WHAT";
     dwnWriteInputButton.disabled = false;
     dwnWriteInputProgress.style.visibility = "hidden";
@@ -271,7 +293,7 @@
     dwnReadInputProgress.style.visibility = "visible";
 
     dwnReadOutput.innerHTML = "";
-    dwnReadOutput.innerHTML = await dwnReadDataFromRecordWithId();
+    dwnReadOutput.innerHTML = await dwnReadDataFromRecord(record);
 
     dwnReadInputButton.disabled = false;
     dwnReadInputProgress.style.visibility = "hidden";
@@ -287,7 +309,7 @@
     dwnUpdateInputProgress.style.visibility = "visible";
     dwnUpdateOutput.innerHTML = "";
     let updateValue = dwnUpdateInputFile.value;
-    dwnUpdateOutput.innerHTML = await dwnUpdateDataFromRecordWithId(updateValue);
+    dwnUpdateOutput.innerHTML = await dwnUpdateDataFromRecord(record,updateValue);
     dwnUpdateInputButton.disabled = false;
     dwnUpdateInputProgress.style.visibility = "hidden";
     update();
@@ -298,7 +320,7 @@
     dwnDeleteInputProgress.style.visibility = "visible";
     dwnDeleteOutputSummary.innerHTML = "...";
     dwnDeleteOutputDetailsTextarea.value = "";
-    await dwnDeleteRecordWithId();
+    await dwnDeleteRecord(record);
     dwnDeleteInputProgress.style.visibility = "hidden";
 
     update();
